@@ -5,7 +5,7 @@
 #
 # ELF only
 #
-#	$Id: Makefile.Linux,v 1.11 2005/09/14 17:03:19 vvd0 Exp $
+#	$Id: Makefile.Linux,v 1.12 2005/09/22 12:49:14 vvd0 Exp $
 #
 
 USE_ASM=-Did386
@@ -22,7 +22,6 @@ QWDTOOLS_DIR=$(MAINDIR)/source/qwdtools
 
 CC=gcc
 BASE_CFLAGS=-Wall -pipe -DUSE_PR2 -funsigned-char
-# -DREGEX
 #DEBUG_CFLAGS=$(BASE_CFLAGS) -g
 RELEASE_CFLAGS=$(BASE_CFLAGS) -O9 -ffast-math -funroll-loops \
 	-fomit-frame-pointer -fexpensive-optimizations
